namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-locations-inside-prison-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-locations-inside-prison-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "move-a-prisoner-digital"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Locations Inside Prison Service"
    cloud-platform.justice.gov.uk/owner: "Move a Prisoner Squad A: MoveaPrisonerSquadA@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-locations-inside-prison-api.git,https://github.com/ministryofjustice/hmpps-locations-inside-prison.git,https://github.com/ministryofjustice/hmpps-non-residential-locations-ui.git"
    cloud-platform.justice.gov.uk/team-name: "move-a-prisoner"
